BACKPORT: staging: android: binder: move to the real part of the kernel
The Android binder code has been "stable" for many years now.  No matter
what comes in the future, we are going to have to support this API, so
might as well move it to the "real" part of the kernel as there's no
real work that needs to be done to the existing code.

[@dev-harsh1998]: Adjust for 3.10 kernel

Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>
Signed-off-by: dev-harsh1998 <harshitjain6751@gmail.com>
Change-Id: I78f71e0f9b4d21d36d2e0f7ff2c9cc0ea7d6ea1d

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -176,3 +176,5 @@ obj-$(CONFIG_SENSORS_FINGERPRINT)	+= fingerprint/
 
 # gator.ko
 obj-$(CONFIG_GATOR)		+= gator/
+
+obj-$(CONFIG_ANDROID)		+= android/
