--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -224,6 +224,7 @@ CONFIG_CMA_SIZE_MBYTES=8
 CONFIG_PROC_DEVICETREE=y
 CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP=y
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
 CONFIG_SAMSUNG_JACK=y
 CONFIG_QSEECOM=y
