--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -231,6 +231,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
 CONFIG_SAMSUNG_JACK=y
 CONFIG_QSEECOM=y
+CONFIG_UID_CPUTIME=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_SEC_MISC=y
 CONFIG_SCSI=y
